# drive_mind

./: .env  .env.example  Cargo.toml  docker-compose.yaml
src/: main.rs
src/entities/: answers.rs  categories.rs  images.rs  lessons.rs  mod.rs  question_categories.rs  questions.rs  test_question_answers.rs  test_questions.rs  tests.rs  topics.rs  user_favorite_questions.rs  user_subscriptions.rs  users.rs
src/migrations/: m20251211_000001_users.rs  m20251211_000002_user_subscriptions.rs  m20251211_000003_topics.rs  m20251211_000004_lessons.rs  m20251211_000005_images.rs  m20251211_000006_questions.rs  m20251211_000007_answers.rs  m20251211_000008_user_favorite_questions.rs  m20251211_000009_categories.rs  m20251211_000010_questions_add_fields.rs  m20251211_000011_question_categories.rs  m20251211_000012_tests.rs  m20251211_000013_test_questions.rs  m20251211_000014_test_question_answers.rs  m20260118_000003_answers.rs  m20260118_000004_topics_subscription_required.rs  mod.rs  utils.rs
src/models/: answers.rs  categories.rs  images.rs  lessons.rs  mod.rs  question_categories.rs  questions.rs  tests.rs  topics.rs  users.rs
src/rest/: answers.rs  auth.rs  categories.rs  images.rs  lessons.rs  mod.rs  question_categories.rs  questions.rs  tests.rs  topics.rs  user_favorite_questions.rs  users.rs
src/tasks/: handle_subscriptions.rs  mod.rs
src/utils/: config.rs  db.rs  extractors.rs  jwt.rs  mod.rs  password.rs  response.rs
