[package]
name = "drive_mind"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "full"] }
futures = "0.3.31"
# HTTP server
axum = { version = "0.8", features = ["ws", "tokio", "json", "query", "tracing", "multipart", "http1", "http2"] }
reqwest = { version = "0.12.15", features = ["json"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
axum-extra = { version = "0.10.1", features = [
    "typed-header",
    "protobuf",
    "typed-routing",
] }
hyper-util = { version = "0.1.11", features = ["full"] }
http-body-util = { version = "0.1.3", features = ["full"] }
# Serialize - Deserialize
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
# Logs
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "registry",
    "fmt",
    "json",
    "local-time",
    "ansi",
] }
# UUID
uuid = { version = "1.13.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
uuid-macro-internal = { version = "1.13.1" }
# Datetime
chrono = { version = "0.4.39", features = [
    "alloc",
    "std",
    "clock",
    "now",
    "serde",
] }
chrono-tz = "0.10.3"
# Decimal
rust_decimal = "1.37.1"
# Database / ORM
sea-orm = { version = "=2.0.0-rc.28", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"] }
sea-orm-migration = { version = "=2.0.0-rc.28", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"] }
# Config
clap = { version = "4.5.34", features = ["cargo", "derive", "env", "string"] }
dotenv = { version = "0.15.0", features = ["clap"] }
# Blazingly fast concurrent map in Rust.
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
# Mac address utils
eui48 = "1.1.0"
# Background tasks
apalis = { version = "0.7.4", features = ["catch-panic", "docsrs", "document-features", "filter", "layers", "retry", "uuid"] }
apalis-cron = "0.7.4"
# apalis-redis = "0.7.4"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp"] }
# Openapi
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "decimal", "openapi_extensions", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
# Auth | Token
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.8"
base64 = "0.21"
argon2 = { version = "0.5.3", features = ["simple", "std"] }
rand_core = { version = "0.6.4" }
thiserror = "2.0.17"
hyper = "1.8.1"
# Email | HTML template
lettre = {version = "0.11.19", default-features=false, features = ["tokio1", "smtp-transport", "pool", "hostname", "builder", "tokio1-native-tls"]}
askama = { version = "0.14.0", features = ["full"] }
regex = "1.12.2"
# Validator
validator = { version = "0.19", features = ["derive"] }
# # SSL | TLS
# rustls = { version = "0.23.35", features = ["ring"] }
# webpki-roots = "1.0.4"


[profile.release]
strip = true
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
